# zero2prod-newsletter

./: CLAUDE.md  Cargo.toml  Dockerfile  README.md  spec.yaml
.sqlx/: query-95d49e2a8add3953cdc08af3ea2b69b3e7f85f43e5fbd443ea6da60910d3be34.json  query-9b30e3dd4d8f938484fd7a873c7e32d3a133fb1ea34034d106d67128383b9113.json  query-b7dab943d2f45980521c09d5f83cf23d5b0169f4234e023e79b7f402eb410723.json  query-b9f7c7581a314dd02e99d61ff0da1d94ab321c605ed981f8f1ee071c0943e929.json  query-e9d1c48c2d46d3753f3e2f0276a0e1dd6eed04154e6ebf2c3dcf20c3eff631d1.json
config/: base.yaml  production.yaml
migrations/: 20250927190547_make_status_not_null_in_subscriptions.sql  20251122181433_create_users_table.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  mod.rs  newsletters.rs  subscriptions.rs  subsriptions_confirm.rs
tests/: health_check.rs
tests/api/: helpers.rs  main.rs  newsletter.rs  newsletters.rs  subscription_confirm.rs  subscriptions.rs
